# indicator-forecasting

./: .env  .gitignore  .gitmodules  README.md  baseline.ipynb  create_training_data.py  data_processing.ipynb  dataset.py  general_utils.py  image_processing.py  inf_output.xlsx  inference.py  inference_pipeline.py  loadenv.py  mean_std.json  merged_common_sheets.xlsx  merged_common_sheets2.xlsx  merged_common_sheets3.xlsx  models.py  output.xlsx  output2.xlsx  performance.py  preprocessing.py  pyproject.toml  test.ipynb  test.py  test_cnn.py  test_labels.py  time_precision.ipynb  train_shapes.json
data_processing/: create_training_data.py  dataset.py  preprocessing.py  test_labels.py
model/: squeeze_multilabel2.pth  squeeze_multilabel2_synth.pth  squeeze_multilabel3_synth.pth  squeeze_multilabel_synth.pth  squeezenet_256_final.pth  squeezenet_256_scaled_final.pth  squeezenet_256_synth_scaled_final.pth  squeezenet_multilabel.pth
model_evaluation/: inference.py  inference_pipeline.py  performance.py
models_architectures/: general.py  resnet.py  squeezenet.py  training.py  utils.py  vit.py
output/: squeezenet_multilabel.xlsx  squeezenet_multilabel2.xlsx  squeezenet_multilabel_synth.xlsx
output/merged/: VIT.xlsx  VIT_128_synth_aaaaaa_S.xlsx  resnet_multilabel2.xlsx  resnet_multilabel3_synth_S.xlsx  resnet_multilabel_synth_S.xlsx  squeeze_multilabel3_synth_S.xlsx  squeeze_multilabel_synth_S.xlsx  squeezenet_multilabel2.xlsx  squeezenet_multilabel_synth.xlsx
scalers/: ecdf_scaler_synth.pkl
