[project]
name = "stage"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "xlsxwriter (>=3.2.3,<4.0.0)",
    "torch-summary (>=1.4.5,<2.0.0)",
    "pytorch-model-summary (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
